# woow_hermes_mcp_server

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-TW.md  deny-list.yaml  docker-compose.yml  k8s-deploy.yaml  pyproject.toml
docs/: ARCHITECTURE.md
frontend/: index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: ConfigEditor.jsx  ConnectionConfig.jsx  CronManager.jsx  Dashboard.jsx  DenyList.jsx  GatewayControl.jsx  HermesToolsets.jsx  LogViewer.jsx  McpServerManager.jsx  ModelManager.jsx  PermissionEditor.jsx  SessionManager.jsx  SettingsPage.jsx  SkillManager.jsx  TokenManager.jsx  ToolManager.jsx  WebhookManager.jsx
hermes_mcp_admin/: main.py  tool_registry.py
hermes_mcp_admin/routers/: config.py  dashboard_proxy.py  health.py  logs.py  tokens.py  tools.py
hermes_mcp_server/: server.py
tests/: conftest.py  test_app_factory.py  test_auth.py  test_config_store.py  test_process.py  test_proxy.py  test_shared_core_no_drift.py
